; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/storage/partition_api/partition_find/main/extr_main.c_get_subtype_str.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/storage/partition_api/partition_find/main/extr_main.c_get_subtype_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [31 x i8] c"ESP_PARTITION_SUBTYPE_DATA_NVS\00", align 1
@.str.1 = private unnamed_addr constant [31 x i8] c"ESP_PARTITION_SUBTYPE_DATA_PHY\00", align 1
@.str.2 = private unnamed_addr constant [34 x i8] c"ESP_PARTITION_SUBTYPE_APP_FACTORY\00", align 1
@.str.3 = private unnamed_addr constant [31 x i8] c"ESP_PARTITION_SUBTYPE_DATA_FAT\00", align 1
@.str.4 = private unnamed_addr constant [26 x i8] c"UNKNOWN_PARTITION_SUBTYPE\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @get_subtype_str to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_subtype_str(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %9 [
    i32 129, label %5
    i32 128, label %6
    i32 131, label %7
    i32 130, label %8
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %10

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %10

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %10

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %10

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %10

10:                                               ; preds = %9, %8, %7, %6, %5
  %11 = load i8*, i8** %2, align 8
  ret i8* %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
